add firebase database
to do : add login

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.2",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
