--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^10.7.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "npm": "^10.4.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
