--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "firebase": "^10.7.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
