--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
